# Learning-Something

./: README.md
Accordian/: package-lock.json  package.json
Accordian/src/: App.tsx
Graph-QL/threads-app/: .gitignore  arc.excalidraw  docker-compose.yml  package.json
aws_s3/: package.json
aws_s3/getObjects_backend1/: package.json  tsconfig.json
bolt-landing-page/: index.html  package-lock.json  package.json
bolt-landing-page/src/: App.tsx
code-completion/: package.json
code-completion/app/: page.tsx
code-completion/components/: Editor.tsx
debouncing/: package-lock.json  package.json
debouncing/src/: App.css  App.tsx
dialogue/: package-lock.json  package.json  tailwind.config.ts
golang/db-basics/: go.mod
golang/greetings/: main.go
golang/import/: go.mod
golang/switch/: go.mod
golang/test/: go.mod  go.sum  main.go
grpc/app1/: .gitignore  README.md  client.ts  index.ts  package.json
navbar/: package-lock.json  package.json
python/fastapi/app11/: .env.example  API.md  README.md  docker-compose.yaml  pyproject.toml
python/fastapi/app11/alembic/: env.py
python/fastapi/app11/alembic/versions/: 0465eedb2236_init.py  1d648118c09f_limit_name_and_password_hash_length.py  4a0feed4ed7e_init_with_vector.py  d31b42efc68c_update_document_embedding_dim.py
python/fastapi/app11/app/: main.py
python/fastapi/app11/app/agents/: reasoning_agent.py  retrieval_agent.py
python/fastapi/app11/app/api/controllers/: document.py  user.py
python/fastapi/app11/app/api/routers/: documents.py  user.py
python/fastapi/app11/app/core/: embeddings.py  file_parser.py  llm.py  security.py
python/fastapi/app11/app/db/: session.py
python/fastapi/app11/app/models/: base.py
python/fastapi/app11/app/schemas/: agent.py  user.py
random-color/: package-lock.json  package.json
rust/actix-web/: .env.example  .gitignore  Cargo.toml
rust/actix-web/src/: config.rs  main.rs
rust/actix-web/src/routes/: mod.rs  solana.rs
rust/actix-web/src/services/: solana_service.rs
star rating/: package-lock.json  package.json
throttling/: package-lock.json  package.json
ticket-booking/: .env.example  README.md  config.ts  index.ts  package-lock.json  package.json
(+420 files in other folders)
