[package]
name = "solana-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
# Solana SDK
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
