[project]
name = "app11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "bcrypt==4.0.1",
    "beautifulsoup4>=4.14.2",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.118.0",
    "fastapi-utils>=0.8.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-groq>=0.3.8",
    "langgraph>=0.6.8",
    "passlib>=1.7.4",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "uvicorn>=0.37.0",
]
